--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -3,11 +3,8 @@
 # Add steps that run tests, save build artifacts, deploy, and more:
 # https://docs.microsoft.com/azure/devops/pipelines/languages/php
 
-trigger:
-- master
-
 pool:
-  vmImage: 'ubuntu-latest'
+  vmImage: 'Ubuntu 16.04'
 
 variables:
   phpVersion: 7.2
@@ -22,5 +19,43 @@ steps:
     php -version
   displayName: 'Use PHP version $(phpVersion)'
 
-- script: composer install --no-interaction --prefer-dist
-  displayName: 'composer install'
+- script: |
+    curl -sL https://deb.nodesource.com/setup_11.x | sudo -E bash -
+    sudo apt-get install -y build-essential debconf-utils screen nodejs mysql-server google-chrome-stable
+    sudo apt-get install -y unzip xvfb autogen autoconf libtool pkg-config nasm
+    sudo mysql -uroot -proot -e "use mysql; update user set authentication_string=PASSWORD('poowf') where User='root'; update user set plugin='mysql_native_password';FLUSH PRIVILEGES;"
+    sudo mysql -u root -ppoowf -e 'create database invoiceneko_test;'
+  displayName: 'Installing System Dependencies'
+
+- script: |
+    mysql --version
+  displayName: 'MySQL Version'
+
+- script: |
+    cp .env.travis .env
+  displayName: 'Environment Setup'
+
+- script: |
+    sudo composer self-update
+    composer install --no-interaction --prefer-dist --no-suggest
+    composer --version
+  displayName: 'Installing Package Dependencies'
+
+- script: |
+    php artisan key:generate
+    php artisan migrate
+  displayName: 'Running Migrations'
+
+- script: |
+    sudo npm i -g npm
+    sudo chown -R vsts:vsts ~/.npm
+    sudo chown -R vsts:vsts ~/.config
+    npm install
+    npm run prod
+    node -v
+  displayName: 'Generating build assets'
+
+- script: |
+    screen -d -m google-chrome-stable --headless --disable-gpu --disable-dev-shm-usage --disable-software-rasterizer --remote-debugging-port=9222 http://localhost &
+    screen -d -m php artisan serve &
+  displayName: 'Starting Chrome and the Web Server'
