--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,8 +21,10 @@ steps:
 
 - script: |
     curl -sL https://deb.nodesource.com/setup_11.x | sudo -E bash -
-    sudo apt-get install -y build-essential debconf-utils screen nodejs mysql-server google-chrome-stable
+    sudo apt-get install -y build-essential debconf-utils screen nodejs mysql-server google-chrome-stable curl
     sudo apt-get install -y unzip xvfb autogen autoconf libtool pkg-config nasm
+    sudo curl -s https://getcomposer.org/installer | php
+    sudo mv composer.phar /usr/local/bin/composer
     sudo /etc/init.d/mysql start
     sudo mysql
     ALTER USER 'root'@'localhost' IDENTIFIED WITH mysql_native_password BY 'GOL_2020';
