--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -38,19 +38,20 @@ steps:
   displayName: 'Environment Setup'
 
 - script: |
+    cd /home/vsts/work/1/s/TriboreHealthWebsite
     sudo composer self-update
     composer install --no-interaction --prefer-dist --no-suggest
     composer --version
   displayName: 'Installing Package Dependencies'
 
 - script: |
-    cd /home/vsts/work/1/s
+    cd /home/vsts/work/1/s/TriboreHealthWebsite
     php artisan key:generate
     php artisan migrate
   displayName: 'Running Migrations'
 
 - script: |
-    cd /home/vsts/work/1/s
+    cd /home/vsts/work/1/s/TriboreHealthWebsite
     sudo npm i -g npm
     sudo chown -R vsts:vsts ~/.npm
     sudo chown -R vsts:vsts ~/.config
@@ -60,6 +61,7 @@ steps:
   displayName: 'Generating build assets'
 
 - script: |
+    cd /home/vsts/work/1/s/TriboreHealthWebsite
     screen -d -m google-chrome-stable --headless --disable-gpu --disable-dev-shm-usage --disable-software-rasterizer --remote-debugging-port=9222 http://localhost &
     screen -d -m php artisan serve &
   displayName: 'Starting Chrome and the Web Server'
