--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -36,20 +36,20 @@ steps:
   displayName: 'Environment Setup'
 
 - script: |
-    cd /home/vsts/work/1/s/TriboreHealthWebsite
+    cd /home/vsts/work/1/s/
     sudo composer self-update
     composer install --no-interaction --prefer-dist --no-suggest
     composer --version
   displayName: 'Installing Package Dependencies'
 
 - script: |
-    cd /home/vsts/work/1/s/TriboreHealthWebsite
+    cd /home/vsts/work/1/s/
     php artisan key:generate
     php artisan migrate
   displayName: 'Running Migrations'
 
 - script: |
-    cd /home/vsts/work/1/s/TriboreHealthWebsite
+    cd /home/vsts/work/1/s/
     sudo npm i -g npm
     sudo chown -R vsts:vsts ~/.npm
     sudo chown -R vsts:vsts ~/.config
@@ -59,7 +59,7 @@ steps:
   displayName: 'Generating build assets'
 
 - script: |
-    cd /home/vsts/work/1/s/TriboreHealthWebsite
+    cd /home/vsts/work/1/s/
     screen -d -m google-chrome-stable --headless --disable-gpu --disable-dev-shm-usage --disable-software-rasterizer --remote-debugging-port=9222 http://localhost &
     screen -d -m php artisan serve &
   displayName: 'Starting Chrome and the Web Server'
