--- a/.env
+++ b/.env
@@ -7,10 +7,10 @@ APP_URL=http://localhost
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=triborehealth.mysql.database.azure.com
+DB_HOST=tribore-health.mysql.database.azure.com
 DB_PORT=3306
 DB_DATABASE=project_tribore
-DB_USERNAME=tribore@triborehealth
+DB_USERNAME=tribore@tribore-health
 DB_PASSWORD=GOL_2020
 
 BROADCAST_DRIVER=log
