--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_NAME="Tribore Health"
 APP_ENV=local
 APP_KEY=base64:J9uYX8GeQyaIkeYZsBie4vFGOKXxf1KEzFK4362bc1s=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=https://localhost
 
 LOG_CHANNEL=stack
 
