Added change to production mode .env

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 APP_NAME="Tribore Health"
-APP_ENV=local
+APP_ENV=production
 APP_KEY=base64:J9uYX8GeQyaIkeYZsBie4vFGOKXxf1KEzFK4362bc1s=
 APP_DEBUG=true
 APP_URL=https://localhost
