--- a/.env
+++ b/.env
@@ -25,10 +25,10 @@ REDIS_PORT=6379
 
 MAIL_MAILER=smtp
 MAIL_HOST=smtp.googlemail.com
-MAIL_PORT=587
+MAIL_PORT=465
 MAIL_USERNAME=isaackmotanya6@gmail.com
 MAIL_PASSWORD=Isaamile2019
-MAIL_ENCRYPTION=tls
+MAIL_ENCRYPTION=ssl
 MAIL_FROM_ADDRESS=info@triborehealth.com
 MAIL_FROM_NAME="${APP_NAME}"
 
