Added mail details .env

--- a/.env
+++ b/.env
@@ -28,7 +28,7 @@ MAIL_HOST=smtp.gmail.com
 MAIL_PORT=465
 MAIL_USERNAME=isaackmotanya6@gmail.com
 MAIL_PASSWORD=Isaamille2019
-MAIL_ENCRYPTION=ssl
+MAIL_ENCRYPTION=tls
 MAIL_FROM_ADDRESS=isaackmotanya6@gmail.com
 MAIL_FROM_NAME="${APP_NAME}"
 
