--- a/.htaccess
+++ b/.htaccess
@@ -10,7 +10,8 @@
     RewriteRule ^ ^$1 [N]
 
     RewriteCond %{REQUEST_URI} (\.\w+$) [NC]
-    RewriteRule ^(.*)$ public/$1
+    RewriteRule ^.*$ /public/$1 [NC,L,QSA]
+    
 
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteCond %{REQUEST_FILENAME} !-f
