update : fixing the pipeline

--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -46,6 +46,7 @@ steps:
     cd /home/vsts/work/1/s/
     php artisan key:generate
     sudo php artisan migrate
+    yes
   displayName: 'Running Migrations'
 
 - script: |
