--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -45,8 +45,7 @@ steps:
 - script: |
     cd /home/vsts/work/1/s/
     php artisan key:generate
-    sudo php artisan migrate
-    yes
+    php artisan migrate --force
   displayName: 'Running Migrations'
 
 - script: |
