--- a/.env
+++ b/.env
@@ -7,11 +7,11 @@ APP_URL=https://localhost
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=tribore-health.mysql.database.azure.com
+DB_HOST=localhost
 DB_PORT=3306
 DB_DATABASE=project_tribore
-DB_USERNAME=tribore@tribore-health
-DB_PASSWORD=GOL_2020
+DB_USERNAME=root
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
