--- a/.htaccess
+++ b/.htaccess
@@ -10,8 +10,8 @@
     RewriteRule ^ ^$1 [N]
 
     RewriteCond %{REQUEST_URI} (\.\w+$) [NC]
-    RewriteRule ^.*$ /public/$1 [NC,L,QSA]
-    
+    RewriteRule ^(.*)$ public/$1
+
 
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteCond %{REQUEST_FILENAME} !-f
